--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   /* background-color: #1e0555; */
   /* background: rgb(155, 73, 216); */
-  background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
+  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
 .container-wrapper {
@@ -29,16 +29,33 @@ body,
   align-items: center;
 }
 
-#help {
+#help,
+#refresh {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   position: absolute;
+  border-radius: 50%;
   background-color: #dc3545;
-  width: 100px;
+  width: 40px;
+  height: 40px;
   color: #fff;
-  padding: 0.5rem 1rem;
+  /* padding: 0.5rem; */
   font-weight: 800;
   top: 1rem;
   left: 1rem;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 7px 15px rgba(220 53 69 / 50%);
+}
+
+#refresh {
+  left: 4rem;
+  background-color: #238ae6;
+  box-shadow: 0 7px 15px rgb(35 138 230 / 50%);
+}
+
+.fa {
+  font-size: 1.2rem;
 }
 
 #setting {
@@ -47,7 +64,7 @@ body,
   padding: 0.7rem 3rem;
   font-weight: 800;
   top: calc(3.5rem + 1rem);
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 7px 15px rgb(25 137 8 / 50%);
 }
 
 #ready {
@@ -56,7 +73,7 @@ body,
   padding: 0.7rem 3rem;
   font-weight: 800;
   top: calc(3.5rem + 1rem);
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 7px 15px rgba(251 154 0 / 50%);
 }
 
 .container {
@@ -134,13 +151,13 @@ body,
 
 @media (max-width: 600px) {
   body {
-    background: rgb(121, 163, 248);
+    /* background: rgb(121, 163, 248);
     background: linear-gradient(
       180deg,
       rgba(121, 163, 248, 1) 0%,
       rgba(147, 194, 240, 1) 61%,
       rgba(176, 228, 231, 1) 91%
-    );
+    ); */
 
     justify-content: center;
   }
@@ -154,7 +171,7 @@ body,
   }
 
   #ready,
-  #setting {
+  #setting{
     border-radius: 50px;
   }
 
